chore: update index.html to be just a page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
-title: Some business idea
+layout: page
+title: Clifton Codeworks 
 subtitle: Offering tailored services in the Bristol area
 ---
