chore: update subtitle

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: page
 title: Clifton Codeworks 
-subtitle: Offering tailored services in the Bristol area
+subtitle: Offering cloud engineering services
 ---
