--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: page
-title: Clifton Codeworks 
-subtitle: Offering cloud engineering services
+title: Clifton Cloudworks 
+subtitle: Offering software delivery services
 ---
