--- a/index.html
+++ b/index.html
@@ -3,9 +3,4 @@ layout: page
 title: Clifton Cloudworks 
 subtitle: Offering software delivery services
 ---
-
-# Hello world
-
-Hey
-
-## Test
+<p>Based in Bristol, UK, Clifton Cloudworks helps startups and small businesses deliver software products quickly and reliably using modern cloud-native technologies and best practices.</p>
