--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: page
 title: Clifton Cloudworks 
 subtitle: Offering software delivery services
 ---
-<p style="display:flex; align-items:center; justify-content:center; margin:0; text-align:center;">
+<p style="padding-top: 40px; display:flex; align-items:center; justify-content:center; margin:0; text-align:center;">
     Based in Bristol, UK, Clifton Cloudworks helps startups and small businesses deliver software products quickly and reliably using modern cloud-native technologies and best practices.
 </p>
