--- a/404.html
+++ b/404.html
@@ -4,10 +4,18 @@ title: 404 - Page not found
 permalink: /404.html
 ---
 
-<div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
-  <br/>
+<div class="container text-center" style="padding: 60px 20px;">
+  <h1 style="font-size: 6rem; font-weight: 800; color: #404040; margin-bottom: 0; line-height: 1;">404</h1>
+  <h2 style="font-size: 2rem; margin-bottom: 20px; color: #6A89A7;">Page Not Found</h2>
+  
+  <p style="font-size: 1.2rem; max-width: 600px; margin: 0 auto 40px auto; color: #666;">
+    It seems the page you are looking for has been moved, deleted, or never existed. 
+    Don't worry, our cloud engineers are investigating the missing data blocks.
+  </p>
 
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <img src="{{ '/assets/img/404-marketing.png' | relative_url }}" alt="404 Error Tech Illustration" class="img-fluid" style="max-height: 400px; margin-bottom: 40px; border-radius: 8px;" />
+
+  <div>
+    <a href="{{ '/' | relative_url }}" class="btn btn-primary btn-lg" style="background-color: #6A89A7; border-color: #6A89A7; padding: 12px 30px; font-size: 1.1rem;">Return to Homepage</a>
+  </div>
 </div>
