--- a/404.html
+++ b/404.html
@@ -4,18 +4,26 @@ title: 404 - Page not found
 permalink: /404.html
 ---
 
-<div class="container text-center" style="padding: 60px 20px;">
-  <h1 style="font-size: 6rem; font-weight: 800; color: #404040; margin-bottom: 0; line-height: 1;">404</h1>
-  <h2 style="font-size: 2rem; margin-bottom: 20px; color: #6A89A7;">Page Not Found</h2>
-  
-  <p style="font-size: 1.2rem; max-width: 600px; margin: 0 auto 40px auto; color: #666;">
-    It seems the page you are looking for has been moved, deleted, or never existed. 
-    Don't worry, our cloud engineers are investigating the missing data blocks.
-  </p>
+<div class="static-page-background"></div>
 
-  <img src="{{ '/assets/img/404-marketing.png' | relative_url }}" alt="404 Error Tech Illustration" class="img-fluid" style="max-height: 400px; margin-bottom: 40px; border-radius: 8px;" />
+<div class="container-fluid text-center" style="padding-top: 100px; padding-bottom: 60px;">
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-10 col-lg-8">
+      
+      <h1 class="display-1 font-weight-bold mb-0" style="line-height: 1;">404</h1>
+      <h2 class="h2 mb-4 text-muted" style="color: var(--hover-col) !important;">Page Not Found</h2>
+      
+      <p class="lead mb-5 mx-auto" style="max-width: 600px;">
+        It seems the page you are looking for has been moved, deleted, or never existed. 
+        Don't worry, our cloud engineers are investigating the missing data blocks.
+      </p>
 
-  <div>
-    <a href="{{ '/' | relative_url }}" class="btn btn-primary btn-lg" style="background-color: #6A89A7; border-color: #6A89A7; padding: 12px 30px; font-size: 1.1rem;">Return to Homepage</a>
+      <img src="{{ '/assets/img/404-marketing.png' | relative_url }}" alt="404 Error Tech Illustration" class="img-fluid mb-5" style="max-height: 400px; border-radius: 8px; box-shadow: 0 4px 20px rgba(0,0,0,0.3);" />
+
+      <div>
+        <a href="{{ '/' | relative_url }}" class="btn btn-primary btn-lg px-5" style="background-color: var(--link-col); border-color: var(--link-col);">Return to Homepage</a>
+      </div>
+
+    </div>
   </div>
 </div>
